--- a/src/Calculatricecss.css
+++ b/src/Calculatricecss.css
@@ -4,4 +4,21 @@ body {
     padding: 40px;
     font-family: Arial;
     text-align: center;
+    
   }
+
+button{
+  background-color: dimgrey;
+  color: white;
+  font-family: Arial;
+  text-align: center;
+  width: 100px;
+  padding: 20px;
+  margin: 20px;
+}
+
+input{
+  padding: 20px;
+  width: 500px;
+}
+
