--- a/src/Calculatricecss.css
+++ b/src/Calculatricecss.css
@@ -12,13 +12,14 @@ button{
   color: white;
   font-family: Arial;
   text-align: center;
-  width: 100px;
-  padding: 20px;
-  margin: 20px;
+  width: 50px;
+  height: 50px;
+  padding: 0px;
+  margin: 10px;
 }
 
 input{
   padding: 20px;
-  width: 500px;
+  width: 300px;
 }
 
